Initial implementation of schema parsing.

--- a/.gitignore
+++ b/.gitignore
@@ -96,8 +96,8 @@ Temporary Items
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
+.vscode/settings.json
+.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
