--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,7 @@ Temporary Items
 .vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+!.vscode/launch.json
 !.vscode/*.code-snippets
 
 # Local History for Visual Studio Code
