--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,14 @@ add_subdirectory(external/lua EXCLUDE_FROM_ALL)
 set(REALM_BUILD_LIB_ONLY YES)
 add_subdirectory(external/realm-core EXCLUDE_FROM_ALL)
 
+# Add libuv and tell Realm Core to use it
+add_subdirectory(external/libuv EXCLUDE_FROM_ALL)
+target_compile_definitions(ObjectStore PUBLIC
+    REALM_HAVE_UV=1
+    REALM_PLATFORM_NODE=1
+)
+target_link_libraries(ObjectStore PUBLIC uv_a)
+
 # Project-wide build flags
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
