Update module search paths

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "lua.debug.settings.path": "${workspaceFolder}/lib/?/init.lua",
+    "lua.debug.settings.path": "${workspaceFolder}/lib/?/init.lua;${workspaceFolder}/lib/?.lua",
     "cmake.configureOnOpen": true,
     "cmake.statusbar.advanced": {
         "kit": {
