--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,20 +1,30 @@
 set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
 
-add_executable(realm-lua-playground
-    main.cpp
+add_library(realm-lua-objects OBJECT
     realm_util.cpp
     realm_schema.cpp
     realm_native_lib.cpp
     realm_notifications.cpp
 )
 
-target_compile_definitions(realm-lua-playground PUBLIC
-    SCRIPT_SOURCE_PATH="${CMAKE_SOURCE_DIR}"
+target_include_directories(realm-lua-objects PUBLIC
+    ${LUA_INCLUDE_DIR}
 )
 
-target_link_libraries(realm-lua-playground 
-    Lua::Library 
+target_link_libraries(realm-lua-objects PUBLIC 
+    ${LUA_LIBRARIES}
     Realm::ObjectStore 
     Realm::QueryParser
     RealmFFIStatic
+)
+
+add_library(realm-lua MODULE)
+target_link_libraries(realm-lua PRIVATE realm-lua-objects)
+set_target_properties(realm-lua PROPERTIES
+    OUTPUT_NAME "realm"
+    PREFIX ""
+)
+
+install(TARGETS realm-lua
+    LIBRARY DESTINATION "lib"
 )
