Refactor app- and user-related functions to separate files.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,8 @@ add_executable(realm-lua-playground
     realm_schema.cpp
     realm_native_lib.cpp
     realm_notifications.cpp
+    realm_app.cpp
+    realm_user.cpp
 )
 
 target_compile_definitions(realm-lua-playground PUBLIC
