Add support for Atlas Device Sync. (#22)
* Add RealmCredentials for anonymous and email password.

* Add RealmUser.

* Add RealmApp for registering and logging in.

* Add example usage of registering and logging in.

* Add native functions associated with realm app.

* Comment out example usage.

* Add missing comments.

* Refactor app- and user-related functions to separate files.

* Add http transport (#24)

* Add realm sync implementation to prior stubs. (#26)

* Implement creating realm app CPP.

* Implement user-related sync functions CPP.

* Implement RealmUser Lua.

* Implement RealmCredentials Lua.

* Implement RealmApp and opening synced realm Lua.

* Add example usage of realm sync Lua.

* Change @class Realm.Config to include sync optionally.

* Add example usage of realm sync (Lua).

* Remove 'const' from http transport to work with realm_release.

* finishing touches

* reorganize app modules

* refactor userdata

* fix type warnings

* Change Lua docs from '| nil' to '?'.

* Remove/add line break where needed.

* Add 'lib_' prefix to exported CPP functions.

* Remove unused code.

* Add missing lua module configs.

* Log in an already-registered user.

* Update example code for reacting to changes.

* Add collection listener before creating objects.

Co-authored-by: Yavor Georgiev <fealebenpae@users.noreply.github.com>
Co-authored-by: Yavor Georgiev <fealebenpae@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ endif()
 set(REALM_BUILD_LIB_ONLY YES)
 add_subdirectory(external/realm-core EXCLUDE_FROM_ALL)
 
+find_package(CURL REQUIRED)
+
 # Project-wide build flags
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
